--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-package.json
+{
+	"devDependencies": {
+
+	},
+
+	"dependencies": {
+		"body-parser": "^1.4.3",
+		"express": "^4.4.5",
+		"mongoose": "^4.1.0",
+		"q": "^1.4.1",
+		"morgan": "^1.1.1",
+		"request": "^2.36.0"
+	}
+}
