--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-	"devDependencies": {
-
-	},
-
-	"dependencies": {
-		"body-parser": "^1.4.3",
-		"express": "^4.4.5",
-		"mongoose": "^4.1.0",
-		"q": "^1.4.1",
-		"morgan": "^1.1.1",
-		"request": "^2.36.0"
-	}
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "react": "^0.14.7",
+    "react-hot-loader": "^1.3.0",
+    "react-router": "^2.0.0",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.4.3",
+    "express": "^4.4.5",
+    "mongoose": "^4.1.0",
+    "q": "^1.4.1",
+    "morgan": "^1.1.1",
+    "request": "^2.36.0"
+  }
 }
