--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "client/lib"
   ],
   "dependencies": {
-    "jquery": "~2.2.0"
+    "jquery": "~2.2.0",
+    "semantic": "semantic-ui#^2.1.8"
   }
 }
