--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "q": "^1.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "request": "^2.69.0"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "webpack-hot-middleware": "^2.7.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --progress --colors",
+    "start": "webpack-dev-server --progress --colors",
     "build": "webpack --progress --colors"
   },
   "repository": {
