--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "q": "^1.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "request": "^2.69.0"
   },
   "devDependencies": {
