--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "q": "^1.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-facebook-login": "^2.1.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0",
     "request": "^2.69.0"
@@ -28,6 +29,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.5.0",
+    "node-loader": "^0.5.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-debug-inspector": "^0.1.3",
     "react-transform-hmr": "^1.0.2",
