--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
-{
-  "facebook_app_ID": "test",
-  "foursquare_client_ID" : "test",
-  "foursquare_client_secret": "test"
-}
+/*{
+  "facebookAppID": "test",
+  "foursquareClientID" : "test",
+  "foursquareClientSecret": "test"
+}*/
