Fix inconsistent .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 ## API keys ##
 client/config/APIKeys.js
 public/config/APIKeys.js
-./config.json
-./config.js
+config.js
 
 node_modules
 public/lib/
