Update syntax of package.json. Author --> contributors as suggested by NPMs documentation

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "type": "git",
     "url": "git+https://github.com/rarescarab/flock.git"
   },
-  "author": [
+  "contributors": [
     "Andrew Bresee",
     "Benny Hung",
     "John Domingo",
