--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.5.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^1.0.0",
     "node-loader": "^0.5.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-debug-inspector": "^0.1.3",
