--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "babel-preset-stage-0": "^6.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^1.0.0",
+    "mocha": "^2.4.5",
     "node-loader": "^0.5.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-debug-inspector": "^0.1.3",
     "react-transform-hmr": "^1.0.2",
     "react-transform-render-visualizer": "^0.4.0",
     "redbox-react": "^1.2.2",
+    "should": "^8.2.2",
+    "supertest": "^1.2.0",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.14.1",
