--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^1.0.0",
     "mocha": "^2.4.5",
@@ -38,6 +39,7 @@
     "react-transform-hmr": "^1.0.2",
     "react-transform-render-visualizer": "^0.4.0",
     "redbox-react": "^1.2.2",
+    "request-mocha": "^0.2.0",
     "should": "^8.2.2",
     "supertest": "^1.2.0",
     "webpack": "^1.12.13",
