--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-facebook-login": "^2.1.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "request-promise": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
