--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,6 @@
   ],
   "dependencies": {
     "jquery": "~2.2.0",
-    "semantic": "semantic-ui#^2.1.8",
-    "react-semantify": "^0.4.1"
+    "semantic": "semantic-ui#^2.1.8"
   }
 }
