--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-facebook-login": "^2.1.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0",
+    "react-semantify": "^0.4.1",
     "request": "^2.69.0",
     "request-promise": "^2.0.1"
   },
